[tool.poetry]
name = "app"
version = "2022.06.21"
description = ""
authors = ["Atem18 <contact@atemlire.io>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
Pillow = "^9.0.0"
dumb-init = "^1.2.5"
TA-Lib = { version = "^0.4.21", optional = true }

[tool.poetry.extras]
talib = ["TA-Lib"]

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
black = "^21.7b0"
mypy = "^0.971"
pycodestyle = "^2.7.0"
django-stubs = "^1.8.0"
flake8 = "^5.0.0"

[tool.vulture]
min_confidence = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
