[tool.poetry]
name = "app"
version = "2022.06.21"
description = ""
authors = ["Atem18 <contact@atemlire.io>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
Pillow = "^10.2.0"
dumb-init = "^1.2.5"
TA-Lib = { version = "^0.4.21", optional = true }
django = "^4.1.13"

[tool.poetry.extras]
talib = ["TA-Lib"]

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
black = "^24.3"
mypy = "^0.991"
pycodestyle = "^2.7.0"
django-stubs = "^1.8.0"
flake8 = "^6.0.0"

[tool.vulture]
min_confidence = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
